fix text-overflow for div in menu

--- a/assets/sass/pages/_menu.scss
+++ b/assets/sass/pages/_menu.scss
@@ -58,19 +58,21 @@ main {
         border-radius: 15px;
         margin-bottom: 15px;
         padding-left: 10px;
-        h3 {
-          font-size: $tel-text-size;
-        }
         div {
           display: flex;
           flex-direction: column;
           justify-content: center;
           height: 100%;
-margin: 0;
-          white-space: nowrap;
-          overflow:hidden;
-          text-overflow: ellipsis;
           line-height: 1.5em;
+          min-width: 0;
+          *{
+            overflow:hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+          }
+          h3 {
+            font-size: $tel-text-size;
+          }
           p {
             font-weight: 300;
           }
